--- a/outside.scss
+++ b/outside.scss
@@ -2,11 +2,12 @@
    由 slinglinh_p 改编自 The Backrooms 中文维基
 */
  
-@import url("https://nationarea.wikidot.com/local--files/special:main/normalize-archived.css");
-@import url("https://nationarea.wikidot.com/local--files/special:main/bhl-archived.css");
-@import url("https://nationarea.wikidot.com/local--files/special:main/sidebar.css");
-@import url("https://nationarea.wikidot.com/local--files/special:main/colstyle.min.css");
-@import url("https://nationarea.wikidot.com/local--files/special:main/font-awesome.min.css");
+@import url("https://out-of-world.wdfiles.com/local--files/theme:site-theme/normalize-archived.css");
+@import url("https://out-of-world.wdfiles.com/local--files/theme:site-theme/bhl-archived.css");
+@import url("https://out-of-world.wdfiles.com/local--files/theme:site-theme/sidebar.css");
+@import url("https://out-of-world.wdfiles.com/local--files/theme:site-theme/colstyle.min.css");
+@import url("https://out-of-world.wdfiles.com/local--files/theme:site-theme/font-awesome.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@100;300;400;500;700;900&display=swap');
