--- a/outside.scss
+++ b/outside.scss
@@ -16,6 +16,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
  
 :root {
+    --theme-id: "outworld";
     --header-title: "The OutWorld";
     --header-subtitle: "世界的外面？";
 body-font: Inter, "Noto Sans SC", "Noto Sans TC", Arimo, Verdana, Geneva, sans-serif;
